--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ a:visited { color: #205caa; }
 /* Home styles */
 /* ----------------------------------------------------------*/
 
-.home h1 { margin-bottom: 25px; }
+.home h1 { margin-bottom: 25px; text-align: center; }
 
 .posts { list-style-type: none; }
 
